test/corpus/pseudo_instruction_dx.txt
===
should probably break this test in smaller ones
===
    db 33
    db (44)               ; Integer expression
    db (44,55)            ; Invalid - error
    db %(44,55)
    db %('XX','YY')
    db ('AA')             ; Integer expression - outputs single byte
    db %('BB')            ; List, containing a string
    db ?
    db 6 dup (33)
    db 6 dup (33, 34)
    db 6 dup (33, 34), 35
    db 7 dup (99)
    db 7 dup dword (?, word ?, ?)
    dw byte (?,44)
    dw 3 dup (0xcc, 4 dup byte ('PQR'), ?), 0xabcd
    dd 16 dup (0xaaaa, ?, 0xbbbbbb)
    dd 64 dup (?)
---

(source_file
  (source_line
    (instruction
      (pseudo_instruction
        (expression
          (constant
            (constant_numeric))))))
  (source_line
    (instruction
      (pseudo_instruction
        (expression
          (parenthesized_expression
            (expression
              (constant
                (constant_numeric))))))))
  (comment)
  (source_line
    (instruction
      (pseudo_instruction
        (expression
          (parenthesized_expression
            (expression
              (constant
                (constant_numeric)))
            (ERROR))))))
  (comment)
  (source_line
    (instruction
      (pseudo_instruction
        (expression
          (constant
            (constant_numeric)))
        (expression
          (constant
            (constant_numeric))))))
  (source_line
    (instruction
      (pseudo_instruction
        (constant_charstr)
        (constant_charstr))))
  (source_line
    (instruction
      (pseudo_instruction
        (expression
          (parenthesized_expression
            (expression
              (constant
                (constant_charstr))))))))
  (comment)
  (source_line
    (instruction
      (pseudo_instruction
        (constant_charstr))))
  (comment)
  (source_line
    (instruction
      (pseudo_instruction)))
  (source_line
    (instruction
      (pseudo_instruction
        (expression
          (constant
            (constant_numeric)))
        (expression
          (constant
            (constant_numeric))))))
  (source_line
    (instruction
      (pseudo_instruction
        (expression
          (constant
            (constant_numeric)))
        (expression
          (constant
            (constant_numeric)))
        (expression
          (constant
            (constant_numeric))))))
  (source_line
    (instruction
      (pseudo_instruction
        (expression
          (constant
            (constant_numeric)))
        (expression
          (constant
            (constant_numeric)))
        (expression
          (constant
            (constant_numeric)))
        (expression
          (constant
            (constant_numeric))))))
  (source_line
    (instruction
      (pseudo_instruction
        (expression
          (constant
            (constant_numeric)))
        (expression
          (constant
            (constant_numeric))))))
  (source_line
    (instruction
      (pseudo_instruction
        (expression
          (constant
            (constant_numeric))))))
  (source_line
    (instruction
      (pseudo_instruction
        (expression
          (constant
            (constant_numeric))))))
  (source_line
    (instruction
      (pseudo_instruction
        (expression
          (constant
            (constant_numeric)))
        (expression
          (constant
            (constant_numeric)))
        (expression
          (constant
            (constant_numeric)))
        (constant_charstr)
        (expression
          (constant
            (constant_numeric))))))
  (source_line
    (instruction
      (pseudo_instruction
        (expression
          (constant
            (constant_numeric)))
        (expression
          (constant
            (constant_numeric)))
        (expression
          (constant
            (constant_numeric))))))
  (source_line
    (instruction
      (pseudo_instruction
        (expression
          (constant
            (constant_numeric)))))))
