test/corpus/struc.txt
===
declaration
===
struc	mytype

	mt_long:	resd	1
	mt_word:	resw	1
	mt_byte:	resb	1
	mt_str:		resb	32

endstruc
---
(source_file
  (struc_declaration
    (word)
    (label
      (word))
    (expression
      (constant
        (constant_numeric)))
    (label
      (word))
    (expression
      (constant
        (constant_numeric)))
    (label
      (word))
    (expression
      (constant
        (constant_numeric)))
    (label
      (word))
    (expression
      (constant
        (constant_numeric)))))
===
struc instance
===
mystruc:
istruc	mytype

	at mt_long,	dd	123456
	at mt_word,	dw	1024
	at mt_byte,	db	'x'
	at mt_str,	db	'hello, world', 13, 10, 0

iend
---
(source_file
  (source_line
    (label
      (word)))
  (struc_instance
    (word)
    (word)
    (expression
      (constant
        (constant_numeric)))
    (word)
    (expression
      (constant
        (constant_numeric)))
    (word)
    (expression
      (constant
        (constant_charstr)))
    (word)
    (expression
      (constant
        (constant_charstr)))
    (expression
      (constant
        (constant_numeric)))
    (expression
      (constant
        (constant_numeric)))
    (expression
      (constant
        (constant_numeric)))))
===
declaration 2
===
struc mytype2

mt_byte:
	resb	1
	alignb	2
mt_word:
	resw	1
	alignb	4
mt_long:
	resd	1
mt_str:
	resb	32

endstruc
---
(source_file
  (struc_declaration
    (word)
    (label
      (word))
    (expression
      (constant
        (constant_numeric)))
    (expression
      (constant
        (constant_numeric)))
    (label
      (word))
    (expression
      (constant
        (constant_numeric)))
    (expression
      (constant
        (constant_numeric)))
    (label
      (word))
    (expression
      (constant
        (constant_numeric)))
    (label
      (word))
    (expression
      (constant
        (constant_numeric)))))
